--- a/iframe_buttons.html
+++ b/iframe_buttons.html
@@ -13,8 +13,9 @@
 <style>
 .btn-container {
   display: flex;
+  gap: 20px
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 0px;
 }
 
 .btn {
