--- a/iframe_buttons.html
+++ b/iframe_buttons.html
@@ -13,10 +13,10 @@
 <style>
 .btn-container {
   display: flex;
-  gap: 20px
-  justify-content: center;
-  margin-top: 0px;
-  align-items: center;
+  justify-content: center;   /* 横方向の中央揃え */
+  align-items: center;       /* 縦方向の中央揃え */
+  gap: 20px;                 /* ボタン間の間隔 */
+  height: 100%;              /* 親要素の高さに応じて縦中央に */
 }
 
 .btn {
