--- a/iframe_buttons.html
+++ b/iframe_buttons.html
@@ -21,7 +21,6 @@ html, body {
   justify-content: center;   /* 横方向の中央揃え */
   align-items: center;       /* 縦方向の中央揃え */
   gap: 20px;                 /* ボタン間の間隔 */
-  min-height: 100px;         /* ←高さを確保してボタンが見切れないようにする */
   box-sizing: border-box;
 }
 
@@ -33,7 +32,7 @@ html, body {
   align-items: center;
 
   width: 223px;
-  height: 56px;
+  height: 100%;
   background: #2465BB;
   border: 2px solid #698EC3;
   box-shadow: 0px 4px 0px rgba(191, 191, 191, 0.85);
