--- a/iframe_buttons.html
+++ b/iframe_buttons.html
@@ -21,6 +21,7 @@ html, body {
   justify-content: center;   /* 横方向の中央揃え */
   align-items: center;       /* 縦方向の中央揃え */
   gap: 20px;                 /* ボタン間の間隔 */
+  min-height: 100px;         /* ←高さを確保してボタンが見切れないようにする */
   box-sizing: border-box;
 }
 
