--- a/iframe_buttons.html
+++ b/iframe_buttons.html
@@ -46,9 +46,19 @@ html, body {
 
 /* モバイル用（幅500px以下） */
 @media (max-width: 500px) {
+  .btn-container {
+  display: flex;
+  justify-content: center;   /* 横中央 */
+  align-items: center;       /* 縦中央 */
+  gap: 10px;
+  height: 100%;              /* ← 親要素の高さを基準にする */
+  min-height:60px;         /* ボタンが潰れないように最低限の高さ */
+  box-sizing: border-box;
+}
   .btn {
     height: 35 px;   /* ← モバイル時に固定高さを60pxに */
   }
+  
 }
 
 
