--- a/iframe_buttons.html
+++ b/iframe_buttons.html
@@ -52,7 +52,7 @@ html, body {
   }
 
   .btn {
-    height: 100%;            /* モバイル用のボタン高さ */
+    height: 60px;            /* モバイル用のボタン高さ */
     width: 45%;              /* 横並び維持用に縮小 */
   }
 }
