--- a/iframe_buttons.html
+++ b/iframe_buttons.html
@@ -76,7 +76,7 @@ html, body {
 
 <script>
   // 遷移先のベースURL
-  const baseUrl = "https://lp.hitocareer.com/list_form03";
+  const baseUrl = "https://lp.hitocareer.com/form01";
 
   // iframe 自身の URL に付与されたクエリを取得（Studio側で ?{{url_params}} を渡す想定）
   const query = window.location.search; // 例: ?utm_source=google&utm_medium=cpc
